--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 linuxmuster-base7 (7.3.31-0) lmn73-testing; urgency=low
 
-  * Refactor Python code to comply with Debian Python Policy
+  * Refactor Python code to comply with Debian Python Policy (#170).
 
  -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 17 Nov 2025 15:58:17 +0100
 
